--- a/Seven Sides/Base.lproj/Main.storyboard
+++ b/Seven Sides/Base.lproj/Main.storyboard
@@ -31,10 +31,10 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
-        <!--View Controller-->
+        <!--High Score-->
         <scene sceneID="s7Y-VO-fKb">
             <objects>
-                <viewController id="ngc-DR-C62" sceneMemberID="viewController">
+                <viewController id="ngc-DR-C62" customClass="HighScore" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="AUS-so-R9F"/>
                         <viewControllerLayoutGuide type="bottom" id="LfF-sd-6dU"/>
@@ -44,15 +44,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="srf-Br-x7U">
-                                <rect key="frame" x="0.0" y="505" width="126" height="162"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </pickerView>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VeD-Nq-BTh">
-                                <rect key="frame" x="124" y="505" width="126" height="162"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </pickerView>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Zgz-DD-7SM">
-                                <rect key="frame" x="249" y="505" width="126" height="162"/>
+                                <rect key="frame" x="0.0" y="505" width="375" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="High Scores" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N7b-Ew-tcP">
@@ -188,13 +180,6 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Add Your Initials" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jYU-9M-wkO">
-                                <rect key="frame" x="66" y="454" width="243" height="69"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="CaviarDreams" family="Caviar Dreams" pointSize="33"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="6th" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uiN-Uh-YZr">
                                 <rect key="frame" x="27" y="369" width="73" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -216,9 +201,31 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Add Your Initials" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jYU-9M-wkO">
+                                <rect key="frame" x="66" y="428" width="243" height="69"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="CaviarDreams" family="Caviar Dreams" pointSize="33"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
+                    <connections>
+                        <outlet property="fifthName" destination="xTH-ha-MuB" id="B4t-4h-yAr"/>
+                        <outlet property="fifthScore" destination="X31-R8-4Ld" id="Mcn-QK-mRN"/>
+                        <outlet property="firstName" destination="53e-hu-Pg6" id="YQ9-Vj-GLz"/>
+                        <outlet property="firstScore" destination="eHN-N2-VKb" id="mQu-4V-aDQ"/>
+                        <outlet property="fourthName" destination="igt-S0-Jsl" id="F6j-dc-XHU"/>
+                        <outlet property="fourthScore" destination="UdQ-MV-por" id="BNe-st-l6r"/>
+                        <outlet property="namePicker" destination="srf-Br-x7U" id="zmO-od-Var"/>
+                        <outlet property="scondScore" destination="e8a-a5-cTW" id="mhE-s4-DNz"/>
+                        <outlet property="secondName" destination="1Ly-FW-6FG" id="244-Lp-MJO"/>
+                        <outlet property="sixthName" destination="yrS-qe-Kxr" id="N8m-2I-ASu"/>
+                        <outlet property="sixthScore" destination="LHZ-LC-9nV" id="3OF-Lt-sk0"/>
+                        <outlet property="thirdName" destination="Nkf-id-oRe" id="Ko6-vX-3ZO"/>
+                        <outlet property="thirdScore" destination="c4B-Vq-2uQ" id="THx-No-p9o"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cw4-BD-fxX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
