--- a/Seven Sides/Base.lproj/Main.storyboard
+++ b/Seven Sides/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
-                <viewController id="BV1-FR-VrT" customClass="GameViewController" customModule="Seven_Sides" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="game" id="BV1-FR-VrT" customClass="GameViewController" customModule="Seven_Sides" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="8aa-yV-Osq"/>
                         <viewControllerLayoutGuide type="bottom" id="qHh-Mt-9TT"/>
@@ -40,7 +40,7 @@
                         <viewControllerLayoutGuide type="top" id="AUS-so-R9F"/>
                         <viewControllerLayoutGuide type="bottom" id="LfF-sd-6dU"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="c7y-DP-Wu4">
+                    <view key="view" contentMode="scaleToFill" id="c7y-DP-Wu4" customClass="SKView">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
